codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__active_agent_list_above_active_task_list_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
Working (0s • esc to interrupt)                                 
                                                                
• Agents                                                        
  └ □ reviewer Working... (0s, openai/gpt-5.5, 42k)             
    □ integration [worker] Working... (0s, openai/gpt-5.5)      
                                                                
• Tasks 0/2                                                     
  └ □ Build prompts and launch reviewer team                    
    □ Collect outputs and triage findings                       
╭──────────────────────────────────────────────────────────────╮
│❯ Ask Codex to do anything                                    │
╰──────────────────────────────────────────────────────────────╯
  ? for shortcuts                            100% context left
